# argparse

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE.txt  License.txt  README.md  clean-cmake.bat  clean-cmake.sh  configure.ac  create_cmake.sh  git2debchangelog.sh  test-cmake.bat  test-cmake.sh  update-copyright.py
.github/workflows/: cmake-multi-platform.yml
cmd_line_parse/: CMakeLists.txt
cmd_line_parse/inc/: cmd_line_parse.h  cmd_line_parse_api.h
cmd_line_parse/sample/: sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp
cmd_line_parse/src/: cmd_line_parse.cpp  cmd_line_parse_api_lib.cpp  cmd_line_parse_api_lib_private.h  cmd_line_parse_lib_api.cpp
cmd_line_parse/test/: cmd_line_parse_api_test.cpp  cmd_line_parse_test.cpp  cmd_line_parse_unittest.cpp
config_json_parse/inc/: config_json_parse.h
config_json_parse/src/: config_json_parse.cpp
config_xml_parse/inc/: config_xml_parse.h
config_xml_parse/src/: config_xml_parse.cpp
doc/html/: annotated.html  classargparser_1_1cmd__line__parse-members.html  classargparser_1_1cmd__line__parse.html  classargparser_1_1cmd__line__parse__coll__graph.md5  classargparser_1_1cmd__line__parse__inherit__graph.map  classargparser_1_1config__json__parse-members.html  classargparser_1_1config__json__parse.html  classargparser_1_1config__xml__parse-members.html  classargparser_1_1config__xml__parse.html  classargparser_1_1envparser-members.html  classargparser_1_1envparser.html  classargparser_1_1envparser__coll__graph.map  classargparser_1_1envparser__coll__graph.md5  classargparser_1_1listvarg-members.html  classargparser_1_1listvarg.html  classargparser_1_1listvarg__coll__graph.map  classargparser_1_1listvarg__inherit__graph.md5  classargparser_1_1varg-members.html  classargparser_1_1varg.html  classargparser_1_1varg__coll__graph.md5  classargparser_1_1varg__inherit__graph.map  classargparser_1_1varg__intf-members.html  classargparser_1_1varg__intf.html  classargparser_1_1varg__intf__inherit__graph.map  classargparser_1_1varg__intf__inherit__graph.md5  classargparser_1_1vargenum-members.html  classargparser_1_1vargenum.html  classargparser_1_1vargenum__inherit__graph.map  classargparser_1_1vargenum__inherit__graph.md5  classargparser_1_1vargincrement-members.html  classargparser_1_1vargincrement.html  classargparser_1_1vargincrement__coll__graph.map  classargparser_1_1vargincrement__inherit__graph.md5  classes.html  cmd__line__parse_8h.html  cmd__line__parse_8h__incl.map  cmd__line__parse_8h__incl.md5  cmd__line__parse_8h_source.html  cmd__line__parse__api_8h.html  cmd__line__parse__api_8h_source.html  (+90 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  (+42 more)
doc/latex/: annotated.tex  classargparser_1_1cmd__line__parse.tex  classargparser_1_1cmd__line__parse__coll__graph.md5  classargparser_1_1config__json__parse.tex  classargparser_1_1config__xml__parse.tex  classargparser_1_1envparser.tex  classargparser_1_1envparser__inherit__graph.md5  classargparser_1_1listvarg.tex  classargparser_1_1listvarg__inherit__graph.md5  classargparser_1_1varg.tex  classargparser_1_1varg__inherit__graph.md5  classargparser_1_1varg__intf.tex  classargparser_1_1varg__intf__inherit__graph.md5  classargparser_1_1vargenum.tex  classargparser_1_1vargenum__coll__graph.md5  classargparser_1_1vargincrement.tex  classargparser_1_1vargincrement__coll__graph.md5  cmd__line__parse_8h.tex  cmd__line__parse_8h__incl.md5  cmd__line__parse__api_8h.tex  config__json__parse_8h.tex  config__json__parse_8h__incl.md5  config__xml__parse_8h.tex  config__xml__parse_8h__incl.md5  envparse_8h.tex  envparse_8h__incl.md5  files.tex  group__libcmd__line__parser.tex  group__libenvparse.tex  group__libjson__arg__parser.tex  group__libvarg.tex  group__libxml__arg__parser.tex  hierarchy.tex  index.tex  listvarg_8h.tex  listvarg_8h__incl.md5  modules.tex  refman.tex  varg_8h.tex  varg_8h__incl.md5  (+7 more)
doc/xml/: README_8md.xml  classargparser_1_1cmd__line__parse.xml  classargparser_1_1config__json__parse.xml  classargparser_1_1config__xml__parse.xml  classargparser_1_1envparser.xml  classargparser_1_1listvarg.xml  classargparser_1_1varg.xml  classargparser_1_1varg__intf.xml  classargparser_1_1vargenum.xml  classargparser_1_1vargincrement.xml  cmd__line__parse_8h.xml  cmd__line__parse__api_8h.xml  config__json__parse_8h.xml  config__xml__parse_8h.xml  dir_25aa36e821575174c1c14f7e70d8dcee.xml  dir_27d8aa87a02a21189006080d8cf69278.xml  dir_39ce0c028da222b8e6af2cd608838a9c.xml  dir_763912babbd55401cee6986d0dc2f814.xml  dir_b5426fdc3fcb0897b18ebd54e711d721.xml  dir_b59ca386879e1d8d1d1f200de540e8fc.xml  dir_b9b8c22ab575777567b49516456226ef.xml  dir_c527fdae6b10e7dc2c0a979e4fbaf971.xml  dir_edb99c5e7cff881da36b387745ce0ef0.xml  dir_fb1672e5388bb42a62742102c942e3e4.xml  envparse_8h.xml  group__libcmd__line__parser.xml  group__libenvparse.xml  group__libjson__arg__parser.xml  group__libvarg.xml  group__libxml__arg__parser.xml  index.xml  indexpage.xml  listvarg_8h.xml  namespaceargparser.xml  varg_8h.xml  varg__intf_8h.xml  vargenum_8h.xml  vargincrement_8h.xml
envparse/: CMakeLists.txt
envparse/inc/: envparse.h
envparse/src/: envparse.cpp
envparse/test/: envparse_test.cpp
listvarg/: CMakeLists.txt
listvarg/inc/: listvarg.h
listvarg/src/: listvarg.cpp
listvarg/test/: listvarg_test.cpp
parser_base/: CMakeLists.txt
parser_base/inc/: parser_base.h  parser_string_list.h
parser_base/src/: parser_base.cpp  parser_string_list.cpp
parser_base/test/: parser_base_test.cpp  parser_base_unittest.cpp  parser_string_list_test.cpp
sample/: sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  sample_unittest.cpp
varg/: CMakeLists.txt
varg/inc/: listvarg.h  varg.h  varg_intf.h  vargenum.h  vargincrement.h
varg/src/: listvarg.cpp  varg.cpp  varg_intf.cpp  vargincrement.cpp
varg/test/: listvarg_test.cpp  varg_basic_test.cpp  varg_intf_test.cpp  varg_test.cpp  vargenum_test.cpp  vargincrement_test.cpp
varg_intf/: CMakeLists.txt
varg_intf/inc/: varg_intf.h
(+24 files in other folders)
